Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>Header Content</header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running location, distances and times
+    </section>
+    <footer>
+        Social links here
+    </footer>
 </body>
 </html>
