--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Gallery</a></li>
+            <ul id="menu" class="flex">
                 <li><a href="#">Sign Up</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                         
             </ul>
         </nav>
     </header>
