--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </ul>
         </nav>
     </header>
-    <section>
-        Main Image
+    <section id="hero-outter">
+        <div id="hero-image"></div>
     </section>
     <section>
         Club Ethos
