Add cover text and style

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     </header>
     <section id="hero-outter">
         <div id="hero-image"></div>
+        <div id="cover-text">
+             <h2>Love Running</h2>
+             <h3>Dublin Docklands & Phoenix Park</h3>
+
+        </div>
     </section>
     <section>
         Club Ethos
