--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
 
         </div>
     </section>
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <h1>Why Love Running with us?</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
     <section>
         Running location, distances and times
