--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </section>
     <section id="club-ethos">
-        <h1>Why Love Running with us?</h1>
+        <h2 id="welcome">Why Love Running with us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
@@ -73,7 +73,11 @@
             </div>
 
         </div>
-        <div id="center-about">Center</div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
+        </div>
     </section>
     <section>
         Running location, distances and times
