--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2 id="welcome">Why Love Running with us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feel Healthy</h2>
+                <h2>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h2>
                 <hr>
                 <p>
                 Since it improves aerobic fitness, running is a great way to help improve your cariovascular 
@@ -47,7 +47,7 @@
         
         
             <div class="left-about-heading">
-                <h2>Feel Free</h2>
+                <h2>Feel Free <i class="fa-brands fa-fly"></i></h2>
                 <hr>
                 <p>
                 Physical exercise, running included, is known to release endorphins in the brain. Endorphins make
@@ -57,7 +57,7 @@
         </div>
         <div id="right-about">
             <div class="right-about-heading">
-                <h2>Get Social</h2>
+                <h2>Get Social <i class="fa-solid fa-globe"></i></h2>
                 <hr>
                 <p>
                     When we run with others, we can run farther and faster more easily. Social running can pull you out 
@@ -65,7 +65,7 @@
                 </p>
             </div>
             <div class="right-about-heading">
-                <h2>Feel Strong</h2>
+                <h2>Feel Strong <i class="fa-solid fa-dumbbell"></i></h2>
                 <hr>
                 <p>
                     Running strengthens your heart by pumping blood more effectively through your body.
@@ -86,5 +86,6 @@
         Social links here
     </footer>
 </body>
-
+<!--font awesome script-->
+<script src="https://kit.fontawesome.com/f26ba66020.js" crossorigin="anonymous"></script>
 </html>
