--- a/index.html
+++ b/index.html
@@ -117,7 +117,24 @@
         </div>
     </section>
     <footer>
-        Social links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                aria-label="visit our Facebook Page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" 
+                aria-label="visit our Twitter Page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" 
+                aria-label="visit our Youtube Page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" 
+                aria-label="visit our Instagram Page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 </body>
 <!--font awesome script-->
