--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" 
                 aria-label="visit our Facebook Page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
