--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul id="menu" class="flex">
                 <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="index.html" class="active">Home</a></li>
                          
             </ul>
